# heco

./: .gitignore
benchmark/heco_benchmark_container/: CMakeLists.txt  HeteroVector.h  benchmark.cpp  benchmark.h  entt_context.hpp  generate_benchmark_cpp.py  test.cpp
benchmark/heco_benchmark_container/results/: out_get_win_clang.json  out_get_win_msvc.json  out_get_wsl_clang.json  out_get_wsl_gcc.json  out_insert_win_clang.json  out_insert_win_msvc.json  out_insert_wsl_clang.json  out_insert_wsl_gcc.json  plot_comparison.py  script.txt
benchmark/heco_benchmark_map/: CMakeLists.txt  benchmark_map.cpp
benchmark/heco_benchmark_map/results/: comparison_map_get_win_clang.json  comparison_map_get_win_msvc.json  comparison_map_get_wsl_clang.json  comparison_map_get_wsl_gcc.json  comparison_map_insert_win_clang.json  comparison_map_insert_win_msvc.json  comparison_map_insert_wsl_clang.json  comparison_map_insert_wsl_gcc.json  plot_all_map.py
experimental/: heco_n_sparseset_stable.h  vectr.h
